Replaced underscores with dashes

--- a/miniproject2/miniproject2_template.tex
+++ b/miniproject2/miniproject2_template.tex
@@ -44,48 +44,48 @@
 
 \subsection{Discussion}
 
-Visualization description goes here. You can reference figures with Figure \ref{fig:basic_vis_1}.
+Visualization description goes here. You can reference figures with Figure \ref{fig:basic-vis-1}.
 
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.4\textwidth]{example-image.jpg}
     \caption{All ratings in the MovieLens Dataset}
-    \label{fig:basic_vis_1}
+    \label{fig:basic-vis-1}
 \end{figure}
 
 \begin{figure}[!h]
     \centering
     \includegraphics[width=0.4\textwidth]{example-image.jpg}
     \caption{All ratings of the ten most popular movies (movies which have received the most ratings).}
-    \label{fig:basic_vis_2}
+    \label{fig:basic-vis-2}
 \end{figure}
 
 \begin{figure}[!h]
     \centering
     \includegraphics[width=0.4\textwidth]{example-image.jpg}
     \caption{All ratings of the ten best movies (movies with the highest average ratings).}
-    \label{fig:basic_vis_3}
+    \label{fig:basic-vis-3}
 \end{figure}
 
 \begin{figure}[!h]
     \centering
     \includegraphics[width=0.4\textwidth]{example-image.jpg}
     \caption{All ratings of movies from the genre [insert].}
-    \label{fig:basic_vis_4a}
+    \label{fig:basic-vis-4a}
 \end{figure}
 
 \begin{figure}[!h]
     \centering
     \includegraphics[width=0.4\textwidth]{example-image.jpg}
     \caption{All ratings of movies from the genre [insert].}
-    \label{fig:basic_vis_4b}
+    \label{fig:basic-vis-4b}
 \end{figure}
 
 \begin{figure}[!h]
     \centering
     \includegraphics[width=0.4\textwidth]{example-image.jpg}
     \caption{All ratings of movies from the genre [insert].}
-    \label{fig:basic_vis_4c}
+    \label{fig:basic-vis-4c}
 \end{figure}
 
 \newpage
@@ -100,7 +100,7 @@ Your report should contain a section dedicated to matrix factorization methods. 
 
 \subsubsection{Visualization Discussion}
 
-Your report should also contain a section dedicated to matrix factorization visualizations. What, in general, did you observe? Did the results match what you would expect to see? How does the visualization of the most popular movies compare to the visualization of the best movies? How do the visualizations of the three genres you chose compare to one another? How do the visualizations produced by the different matrix factorization methods compare to one another? Be sure to include some plots to indicate which phenomena you’re referring to with respect to your observations. You can refer to specific figures with Figure \ref{fig:hw5_vis_a}
+Your report should also contain a section dedicated to matrix factorization visualizations. What, in general, did you observe? Did the results match what you would expect to see? How does the visualization of the most popular movies compare to the visualization of the best movies? How do the visualizations of the three genres you chose compare to one another? How do the visualizations produced by the different matrix factorization methods compare to one another? Be sure to include some plots to indicate which phenomena you’re referring to with respect to your observations. You can refer to specific figures with Figure \ref{fig:hw5-vis-a}
 
 \subsubsection{Visualization Plots}
 
@@ -108,126 +108,126 @@ Your report should also contain a section dedicated to matrix factorization visu
     \centering
     \includegraphics[width=0.4\textwidth]{example-image.jpg}
     \caption{\textbf{HW5 A:} Any ten movies of your choice from the MovieLens dataset.}
-    \label{fig:hw5_vis_a}
+    \label{fig:hw5-vis-a}
 \end{figure}
 
 \begin{figure}[!h]
     \centering
     \includegraphics[width=0.4\textwidth]{example-image.jpg}
     \caption{\textbf{HW5 B:} The ten most popular movies (movies which have received the most ratings).}
-    \label{fig:hw5_vis_b}
+    \label{fig:hw5-vis-b}
 \end{figure}
 
 \begin{figure}[!h]
     \centering
     \includegraphics[width=0.4\textwidth]{example-image.jpg}
     \caption{\textbf{HW5 C:} The ten best movies (movies with the highest average ratings).}
-    \label{fig:hw5_vis_c}
+    \label{fig:hw5-vis-c}
 \end{figure}
 
 \begin{figure}[!h]
     \centering
     \includegraphics[width=0.4\textwidth]{example-image.jpg}
     \caption{\textbf{HW5 D1:} Ten movies from the genre [insert].}
-    \label{fig:hw5_vis_d1}
+    \label{fig:hw5-vis-d1}
 \end{figure}
 
 \begin{figure}[!h]
     \centering
     \includegraphics[width=0.4\textwidth]{example-image.jpg}
     \caption{\textbf{HW5 D2:} Ten movies from the genre [insert].}
-    \label{fig:hw5_vis_d2}
+    \label{fig:hw5-vis-d2}
 \end{figure}
 
 \begin{figure}[!h]
     \centering
     \includegraphics[width=0.4\textwidth]{example-image.jpg}
     \caption{\textbf{HW5 D3:} Ten movies from the genre [insert].}
-    \label{fig:hw5_vis_d3}
+    \label{fig:hw5-vis-d3}
 \end{figure}
 
 \begin{figure}[!h]
     \centering
     \includegraphics[width=0.4\textwidth]{example-image.jpg}
     \caption{\textbf{Bias A:} Any ten movies of your choice from the MovieLens dataset.}
-    \label{fig:bias_vis_a}
+    \label{fig:bias-vis-a}
 \end{figure}
 
 \begin{figure}[!h]
     \centering
     \includegraphics[width=0.4\textwidth]{example-image.jpg}
     \caption{\textbf{Bias B:} The ten most popular movies (movies which have received the most ratings).}
-    \label{fig:bias_vis_b}
+    \label{fig:bias-vis-b}
 \end{figure}
 
 \begin{figure}[!h]
     \centering
     \includegraphics[width=0.4\textwidth]{example-image.jpg}
     \caption{\textbf{Bias C:} The ten best movies (movies with the highest average ratings).}
-    \label{fig:bias_vis_c}
+    \label{fig:bias-vis-c}
 \end{figure}
 
 \begin{figure}[!h]
     \centering
     \includegraphics[width=0.4\textwidth]{example-image.jpg}
     \caption{\textbf{Bias D1:} Ten movies from the genre [insert].}
-    \label{fig:bias_vis_d1}
+    \label{fig:bias-vis-d1}
 \end{figure}
 
 \begin{figure}[!h]
     \centering
     \includegraphics[width=0.4\textwidth]{example-image.jpg}
     \caption{\textbf{Bias D2:} Ten movies from the genre [insert].}
-    \label{fig:bias_vis_d2}
+    \label{fig:bias-vis-d2}
 \end{figure}
 
 \begin{figure}[!h]
     \centering
     \includegraphics[width=0.4\textwidth]{example-image.jpg}
     \caption{\textbf{Bias D3:} Ten movies from the genre [insert].}
-    \label{fig:bias_vis_d3}
+    \label{fig:bias-vis-d3}
 \end{figure}
 
 \begin{figure}[!h]
     \centering
     \includegraphics[width=0.4\textwidth]{example-image.jpg}
     \caption{\textbf{COTS A:} Any ten movies of your choice from the MovieLens dataset.}
-    \label{fig:cots_vis_a}
+    \label{fig:cots-vis-a}
 \end{figure}
 
 \begin{figure}[!h]
     \centering
     \includegraphics[width=0.4\textwidth]{example-image.jpg}
     \caption{\textbf{COTS B:} The ten most popular movies (movies which have received the most ratings).}
-    \label{fig:cots_vis_b}
+    \label{fig:cots-vis-b}
 \end{figure}
 
 \begin{figure}[!h]
     \centering
     \includegraphics[width=0.4\textwidth]{example-image.jpg}
     \caption{\textbf{COTS C:} The ten best movies (movies with the highest average ratings).}
-    \label{fig:cots_vis_c}
+    \label{fig:cots-vis-c}
 \end{figure}
 
 \begin{figure}[!h]
     \centering
     \includegraphics[width=0.4\textwidth]{example-image.jpg}
     \caption{\textbf{COTS D1:} Ten movies from the genre [insert].}
-    \label{fig:cots_vis_d1}
+    \label{fig:cots-vis-d1}
 \end{figure}
 
 \begin{figure}[!h]
     \centering
     \includegraphics[width=0.4\textwidth]{example-image.jpg}
     \caption{\textbf{COTS D2:} Ten movies from the genre [insert].}
-    \label{fig:cots_vis_d2}
+    \label{fig:cots-vis-d2}
 \end{figure}
 
 \begin{figure}[!h]
     \centering
     \includegraphics[width=0.4\textwidth]{example-image.jpg}
     \caption{\textbf{COTS D3:} Ten movies from the genre [insert].}
-    \label{fig:cots_vis_d3}
+    \label{fig:cots-vis-d3}
 \end{figure}
 
 \end{document}
