Added colab button

--- a/set6/HMM.ipynb
+++ b/set6/HMM.ipynb
@@ -14,6 +14,13 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<a target=\"_blank\" href=\"https://colab.research.google.com/github/emiletimothy/Caltech-CS155-2023/blob/main/set6/HMM.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "O6nW3Il3GECO"
       },
