--- a/set6/HMM.ipynb
+++ b/set6/HMM.ipynb
@@ -1,16 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "toc_visible": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -39,9 +27,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "uyjUYL_Pyocu"
+        "id": "uyjUYL_Pyocu",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "import os\n",
         "import re\n",
@@ -52,9 +45,7 @@
         "from wordcloud import WordCloud\n",
         "from matplotlib import animation\n",
         "from matplotlib.animation import FuncAnimation"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -67,9 +58,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "S903AkHHyQN7"
+        "id": "S903AkHHyQN7",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "# You can use this skeleton code to complete the HMM\n",
         "# implementation of set 5. Once each part is implemented, you can simply\n",
@@ -484,9 +480,7 @@
         "    HMM.unsupervised_learning(X, N_iters)\n",
         "\n",
         "    return HMM"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -499,9 +493,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "lfsoFU5jyjbf"
+        "id": "lfsoFU5jyjbf",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "########################################\n",
         "# CS/CNS/EE 155 2018\n",
@@ -753,9 +752,7 @@
         "    anim = FuncAnimation(fig, animate, frames=M+delay, interval=1000)\n",
         "\n",
         "    return anim\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -768,9 +765,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "Kbi-46J-yf-n"
+        "id": "Kbi-46J-yf-n",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "class Utility:\n",
         "    '''\n",
@@ -887,9 +889,7 @@
         "        moods, mood_map, genres, genre_map = Utility.load_ron()\n",
         "\n",
         "        return genres, genre_map"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -912,9 +912,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "WiEqWfZkzP0H"
+        "id": "WiEqWfZkzP0H",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "def sequence_prediction(n):\n",
         "    '''\n",
@@ -946,9 +951,7 @@
         "\n",
         "for n in range(6):\n",
         "    sequence_prediction(n)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -962,9 +965,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "p7l4C0SQzYDU"
+        "id": "p7l4C0SQzYDU",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "def sequence_probability(n):\n",
         "    '''\n",
@@ -996,9 +1004,7 @@
         "\n",
         "for n in range(6):\n",
         "    sequence_probability(n)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1012,9 +1018,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "LsrBFVRh1lLz"
+        "id": "LsrBFVRh1lLz",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "def sequence_probability(n):\n",
         "    '''\n",
@@ -1046,9 +1057,7 @@
         "\n",
         "for n in range(6):\n",
         "    sequence_probability(n)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1062,9 +1071,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "L3_K_sb31wMb"
+        "id": "L3_K_sb31wMb",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "def supervised_learning():\n",
         "    '''\n",
@@ -1092,9 +1106,7 @@
         "    print('')\n",
         "\n",
         "supervised_learning()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1108,9 +1120,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "6mLn-W3y2uIN"
+        "id": "6mLn-W3y2uIN",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "def unsupervised_learning(n_states, N_iters, seed=None):\n",
         "    '''\n",
@@ -1142,9 +1159,7 @@
         "    print('')\n",
         "\n",
         "unsupervised_learning(4, 1000, seed=1)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1158,9 +1173,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "H8nOX8y03OTV"
+        "id": "H8nOX8y03OTV",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "def sequence_generator(n, k, M, seed=None):\n",
         "    '''\n",
@@ -1188,7 +1208,7 @@
         "        HMM = HiddenMarkovModel(A, O)\n",
         "\n",
         "        # Generate a single input sequence of length m.\n",
-        "        emission, states = HMM.generate_emission(M, seed=seed)\n",
+        "        emission, states = HMM.generate_emission(M, seed=rng)\n",
         "        x = ''.join([str(i) for i in emission])\n",
         "\n",
         "        # Print the results.\n",
@@ -1198,9 +1218,7 @@
         "\n",
         "for n in range(6):\n",
         "    sequence_generator(n, 5, 20, seed=1)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1216,15 +1234,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "MybpA5zh4mGK"
+        "id": "MybpA5zh4mGK",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "text = urllib.request.urlopen('https://raw.githubusercontent.com/emiletimothy/Caltech-CS155-2023/main/set6/data/constitution.txt').read().decode('utf-8')\n",
         "wordcloud = text_to_wordcloud(text, title='Constitution')"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1239,15 +1260,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "-lWlbAmt5P5X"
+        "id": "-lWlbAmt5P5X",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "obs, obs_map = parse_observations(text)\n",
         "hmm8 = unsupervised_HMM(obs, 10, 100)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1262,14 +1286,17 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "woU7-5ek5vAu"
+        "id": "woU7-5ek5vAu",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "visualize_sparsities(hmm8, O_max_cols=50)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1283,15 +1310,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "Tv-2PfuE3dPq"
+        "id": "Tv-2PfuE3dPq",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "print('Sample Sentence:\\n====================')\n",
         "print(sample_sentence(hmm8, obs_map, n_words=25))"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1306,56 +1336,68 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "LzrWiGyZ6Hv1"
+        "id": "LzrWiGyZ6Hv1",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "hmm1 = unsupervised_HMM(obs, 1, 100, seed=1)\n",
         "print('\\nSample Sentence:\\n====================')\n",
         "print(sample_sentence(hmm1, obs_map, n_words=25))"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "snBp__-66ahC"
+        "id": "snBp__-66ahC",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "\n",
         "hmm2 = unsupervised_HMM(obs, 2, 100, seed=1)\n",
         "print('\\nSample Sentence:\\n====================')\n",
         "print(sample_sentence(hmm2, obs_map, n_words=25))"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "CCpXPGUX6fEu"
+        "id": "CCpXPGUX6fEu",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "hmm4 = unsupervised_HMM(obs, 4, 100, seed=1)\n",
         "print('\\nSample Sentence:\\n====================')\n",
         "print(sample_sentence(hmm4, obs_map, n_words=25))"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "L52iuZSX6has"
+        "id": "L52iuZSX6has",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "hmm16 = unsupervised_HMM(obs, 16, 100, seed=1)\n",
         "print('\\nSample Sentence:\\n====================')\n",
         "print(sample_sentence(hmm16, obs_map, n_words=25))"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1370,14 +1412,17 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "zpOm6RuA6jHI"
+        "id": "zpOm6RuA6jHI",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "wordclouds = states_to_wordclouds(hmm8, obs_map)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1396,16 +1441,31 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "qDyS2Xtt6zn4"
+        "id": "qDyS2Xtt6zn4",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "from IPython.display import HTML\n",
         "anim = animate_emission(hmm8, obs_map, M=8, seed=1)\n",
         "HTML(anim.to_html5_video())"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
